# onnxrt

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  deny.toml
.github/workflows/: build.yml
0.1.0/: search-index.js
0.1.0/onnxrt/: all.html  constant.ORT_API_VERSION.html  enum.ExecutionMode.html  enum.ONNXTensorElementDataType.html  enum.OrtAllocatorType.html  enum.OrtErrorCode.html  enum.OrtLanguageProjection.html  enum.OrtLoggingLevel.html  enum.OrtMemType.html  fn.available_providers.html  index.html  macro.impl_AsONNXTensorElementDataType.html  sidebar-items.js  struct.Allocator.html  struct.ArenaCfg.html  struct.Env.html  struct.IoBinding.html  struct.MemoryInfo.html  struct.ModelMetadata.html  struct.RunOptions.html  struct.Session.html  (+9 more)
0.10.0/: search-index.js
0.11.0/: search-index.js
0.12.0/: settings.html
0.14.0/: crates.js  search-index.js
0.15.0/: search-index.js  settings.html  source-files.js
0.16.0/: search-index.js  settings.html  source-files.js
0.16.1/: search-index.js  settings.html
0.17.0/: help.html  search-index.js
0.18.0/: search-index.js  settings.html
0.18.1/: help.html  search-index.js  settings.html
0.19.0/: help.html  search-index.js  settings.html
0.2.0/: search-index.js  settings.html
0.2.1/: search-index.js  settings.html
0.20.0/: help.html  search-index.js  settings.html
0.21.0/: help.html  search-index.js  settings.html
0.22.0/: search-index.js  settings.html
0.23.0/: help.html  search-index.js
0.24.0/: help.html  search-index.js  settings.html  src-files.js
0.3.0/: search-index.js
0.3.1/: search-index.js  settings.html  source-files.js
0.4.0/: search-index.js
0.5.0/: search-index.js
0.6.0/: search-index.js  settings.html
0.7.0/: crates.js  search-index.js  source-files.js
0.8.0/: search-index.js  settings.html
0.9.0/: search-index.js
examples/: mnist.rs
src/: lib.rs
(+1698 files in other folders)
