[package]
name = "onnxrt"
version = "0.15.0"
authors = ["FuriosaAI, Inc."]
description = "OnnxRt provides mid-level Rust bindings to the C API for Microsoft's ONNX Runtime."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/furiosa-ai/onnxrt"
keywords = ["onnx", "neuralnetworks", "ffi", "bindings"]
categories = ["science", "external-ffi-bindings"]
documentation = "https://furiosa-ai.github.io/onnxrt/0.15.0/onnxrt"
edition = "2018"

[dependencies]
once_cell = "1.16.0"
onnxrt-sys = { git = "https://github.com/furiosa-ai/onnxrt-sys", tag = "0.12.0" }
