[package]
name = "onnxrt"
version = "0.18.1"
authors = ["FuriosaAI, Inc."]
description = "OnnxRt provides mid-level Rust bindings to the C API for Microsoft's ONNX Runtime."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/furiosa-ai/onnxrt"
keywords = ["onnx", "neuralnetworks", "ffi", "bindings"]
categories = ["science", "external-ffi-bindings"]
documentation = "https://furiosa-ai.github.io/onnxrt/0.18.1/onnxrt"
edition = "2021"

[dependencies]
once_cell = "1.17.1"
onnxrt-sys = { git = "https://github.com/furiosa-ai/onnxrt-sys", tag = "0.16.0" }
